--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0-beta",
+    "font-awesome": "^4.7.0",
+    "immutability-helper": "^2.4.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-scripts-ts": "2.8.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts-ts": "2.8.0",
+    "reactstrap": "^5.0.0-alpha.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -14,9 +20,14 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/immutability-helper": "^2.0.15",
     "@types/jest": "^21.1.4",
     "@types/node": "^8.0.46",
     "@types/react": "^16.0.15",
-    "@types/react-dom": "^16.0.2"
-  }
+    "@types/react-dom": "^16.0.2",
+    "@types/react-router": "^4.0.16",
+    "@types/react-router-dom": "^4.0.8",
+    "@types/reactstrap": "^4.6.4"
+  },
+  "proxy": "http://localhost:4000"
 }
