--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,7 +15,10 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "types": [
+      "../index"
+    ]
   },
   "exclude": [
     "node_modules",
