--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.4",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-jwt": "^3.0.0"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "@types/mongoose": "^4.7.24",
     "@types/node": "^8.0.46",
     "@types/passport": "^0.3.4",
+    "@types/passport-facebook": "^2.1.6",
     "@types/passport-jwt": "^2.0.24"
   }
 }
