--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.8.0",
-    "reactstrap": "^5.0.0-alpha.3"
+    "reactstrap": "^5.0.0-alpha.3",
+    "rxjs": "^5.5.2"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -27,7 +28,8 @@
     "@types/react-dom": "^16.0.2",
     "@types/react-router": "^4.0.16",
     "@types/react-router-dom": "^4.0.8",
-    "@types/reactstrap": "^4.6.4"
+    "@types/reactstrap": "^4.6.4",
+    "@types/rx": "^4.1.1"
   },
   "proxy": "http://localhost:4000"
 }
