--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,14 @@
     "immutability-helper": "^2.4.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.8.0",
     "reactstrap": "^5.0.0-alpha.3",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "rxjs": "^5.5.2"
   },
   "scripts": {
@@ -26,9 +30,12 @@
     "@types/node": "^8.0.46",
     "@types/react": "^16.0.15",
     "@types/react-dom": "^16.0.2",
+    "@types/react-redux": "^5.0.12",
     "@types/react-router": "^4.0.16",
     "@types/react-router-dom": "^4.0.8",
     "@types/reactstrap": "^4.6.4",
+    "@types/redux-logger": "^3.0.5",
+    "@types/redux-thunk": "^2.1.0",
     "@types/rx": "^4.1.1"
   },
   "proxy": "http://localhost:4000"
