--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.2",
@@ -39,6 +40,7 @@
     "@types/bcryptjs": "^2.4.1",
     "@types/body-parser": "^1.16.5",
     "@types/compression": "0.0.34",
+    "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.1",
     "@types/debug": "0.0.30",
     "@types/express": "^4.0.37",
